package org.example.tourplanner.backend.app;

public enum TransportType {
    BIKE,
    HIKE,
    RUNNING,
    VACATION
}
